--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -14,12 +14,17 @@
     border: none;
     color: white;
     padding: 15px 32px 15px 32px;
-    margin: 5px;
+    margin: 0px;
     text-align: center;
     text-decoration: none;
     display: list-item;
     font-size: 18px;
     min-width: 27px;
+}
+
+.side-btn:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
 }
 
 .content {
